# ad-upload

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  claude_agent.py  config.py  database.py  install.bat  installer.ps1  main.py  meta_api.py  pyproject.toml  requirements.txt  security.py  setup_wizard.py  start.bat  start.sh  start_tray.bat  tray.pyw  version.txt
frontend/: index.html  setup.html
src/meta_ads_mcp/: __init__.py  drive_client.py  meta_client.py  server.py
